packages/plantuml-to-excalidraw/src/parser/grammar/component.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Diagram: peg$parseDiagram,
  };
  let peg$startRuleFunction = peg$parseDiagram;

  const peg$c0 = "@startuml";
  const peg$c1 = "@enduml";
  const peg$c2 = "'";
  const peg$c3 = "/'";
  const peg$c4 = "'/";
  const peg$c5 = "skinparam";
  const peg$c6 = "{";
  const peg$c7 = "}";
  const peg$c8 = "hide";
  const peg$c9 = "package";
  const peg$c10 = "node";
  const peg$c11 = "cloud";
  const peg$c12 = "database";
  const peg$c13 = "folder";
  const peg$c14 = "frame";
  const peg$c15 = "rectangle";
  const peg$c16 = "component";
  const peg$c17 = "as";
  const peg$c18 = "[";
  const peg$c19 = "]";
  const peg$c20 = "interface";
  const peg$c21 = "()";
  const peg$c22 = "..>";
  const peg$c23 = "<..";
  const peg$c24 = "-->";
  const peg$c25 = "<--";
  const peg$c26 = "->";
  const peg$c27 = "<-";
  const peg$c28 = "..";
  const peg$c29 = "--";
  const peg$c30 = "-";
  const peg$c31 = ":";
  const peg$c32 = "\"";
  const peg$c33 = "\r\n";

  const peg$r0 = /^[^\]]/;
  const peg$r1 = /^[^\n\r]/;
  const peg$r2 = /^[^"]/;
  const peg$r3 = /^[A-Za-z_]/;
  const peg$r4 = /^[A-Za-z0-9_]/;
  const peg$r5 = /^[ \t\n\r]/;
  const peg$r6 = /^[ \t]/;
  const peg$r7 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("@startuml", false);
  const peg$e1 = peg$anyExpectation();
  const peg$e2 = peg$literalExpectation("@enduml", false);
  const peg$e3 = peg$literalExpectation("'", false);
  const peg$e4 = peg$literalExpectation("/'", false);
  const peg$e5 = peg$literalExpectation("'/", false);
  const peg$e6 = peg$literalExpectation("skinparam", false);
  const peg$e7 = peg$literalExpectation("{", false);
  const peg$e8 = peg$literalExpectation("}", false);
  const peg$e9 = peg$literalExpectation("hide", false);
  const peg$e10 = peg$literalExpectation("package", false);
  const peg$e11 = peg$literalExpectation("node", false);
  const peg$e12 = peg$literalExpectation("cloud", false);
  const peg$e13 = peg$literalExpectation("database", false);
  const peg$e14 = peg$literalExpectation("folder", false);
  const peg$e15 = peg$literalExpectation("frame", false);
  const peg$e16 = peg$literalExpectation("rectangle", false);
  const peg$e17 = peg$literalExpectation("component", false);
  const peg$e18 = peg$literalExpectation("as", false);
  const peg$e19 = peg$literalExpectation("[", false);
  const peg$e20 = peg$classExpectation(["]"], true, false, false);
  const peg$e21 = peg$literalExpectation("]", false);
  const peg$e22 = peg$literalExpectation("interface", false);
  const peg$e23 = peg$literalExpectation("()", false);
  const peg$e24 = peg$literalExpectation("..>", false);
  const peg$e25 = peg$literalExpectation("<..", false);
  const peg$e26 = peg$literalExpectation("-->", false);
  const peg$e27 = peg$literalExpectation("<--", false);
  const peg$e28 = peg$literalExpectation("->", false);
  const peg$e29 = peg$literalExpectation("<-", false);
  const peg$e30 = peg$literalExpectation("..", false);
  const peg$e31 = peg$literalExpectation("--", false);
  const peg$e32 = peg$literalExpectation("-", false);
  const peg$e33 = peg$literalExpectation(":", false);
  const peg$e34 = peg$classExpectation(["\n", "\r"], true, false, false);
  const peg$e35 = peg$literalExpectation("\"", false);
  const peg$e36 = peg$classExpectation(["\""], true, false, false);
  const peg$e37 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e38 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e39 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e40 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e41 = peg$literalExpectation("\r\n", false);
  const peg$e42 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(elements) {
    const components = [];
    const containers = [];
    const interfaces = [];
    const relations = [];
    const componentMap = new Map();

    function ensureComponent(name) {
      if (!componentMap.has(name)) {
        const c = { name, alias: null, container: null };
        componentMap.set(name, c);
        components.push(c);
      }
    }

    for (const el of elements) {
      if (!el) continue;
      if (el.type === "component") {
        const c = el.value;
        const key = c.alias || c.name;
        if (!componentMap.has(key)) {
          componentMap.set(key, c);
          components.push(c);
        }
      } else if (el.type === "container") {
        containers.push(el.value);
        // Register children as components
        for (const child of el.value.children) {
          const key = child.alias || child.name;
          if (!componentMap.has(key)) {
            componentMap.set(key, child);
            components.push(child);
          }
        }
        // Collect relations from inside containers
        if (el.value.relations) {
          for (const r of el.value.relations) {
            ensureComponent(r.left);
            ensureComponent(r.right);
            relations.push(r);
          }
        }
      } else if (el.type === "interface") {
        interfaces.push(el.value);
      } else if (el.type === "relation") {
        ensureComponent(el.value.left);
        ensureComponent(el.value.right);
        relations.push(el.value);
      }
    }

    return { type: "component", components, containers, interfaces, relations };
  }
  function peg$f1(elements) {
    return elements.map(e => e[0]);
  }
  function peg$f2() {    return null;  }
  function peg$f3() {    return null;  }
  function peg$f4() {    return null;  }
  function peg$f5(kind, name, body) {
    return {
      type: "container",
      value: {
        kind,
        name,
        children: body.children,
        childContainers: body.childContainers,
        relations: body.relations
      }
    };
  }
  function peg$f6() {    return "package";  }
  function peg$f7() {    return "node";  }
  function peg$f8() {    return "cloud";  }
  function peg$f9() {    return "database";  }
  function peg$f10() {    return "folder";  }
  function peg$f11() {    return "frame";  }
  function peg$f12() {    return "rectangle";  }
  function peg$f13(elements) {
    const parsed = elements.map(e => e[0]);
    const children = [];
    const childContainers = [];
    const relations = [];
    const childMap = new Map();
    function ensureChild(name) {
      if (!childMap.has(name)) {
        const c = { name, alias: null, container: null };
        childMap.set(name, c);
        children.push(c);
      }
    }
    for (const el of parsed) {
      if (!el) continue;
      if (el.type === "component") {
        const key = el.value.alias || el.value.name;
        if (!childMap.has(key)) {
          childMap.set(key, el.value);
          children.push(el.value);
        }
      } else if (el.type === "container") {
        childContainers.push(el.value);
        for (const child of el.value.children) {
          const key = child.alias || child.name;
          if (!childMap.has(key)) {
            childMap.set(key, child);
            children.push(child);
          }
        }
        if (el.value.relations) {
          for (const r of el.value.relations) relations.push(r);
        }
      } else if (el.type === "relation") {
        ensureChild(el.value.left);
        ensureChild(el.value.right);
        relations.push(el.value);
      }
    }
    return { children, childContainers, relations };
  }
  function peg$f14() {    return null;  }
  function peg$f15(name, alias) {
    return {
      type: "component",
      value: { name, alias, container: null }
    };
  }
  function peg$f16(name) {
    return {
      type: "component",
      value: { name, alias: null, container: null }
    };
  }
  function peg$f17(name) {
    return {
      type: "component",
      value: { name: name.trim(), alias: null, container: null }
    };
  }
  function peg$f18(name, alias) {
    return {
      type: "interface",
      value: { name, alias }
    };
  }
  function peg$f19(name) {
    return {
      type: "interface",
      value: { name, alias: null }
    };
  }
  function peg$f20(name, alias) {
    return {
      type: "interface",
      value: { name, alias }
    };
  }
  function peg$f21(name) {
    return {
      type: "interface",
      value: { name, alias: null }
    };
  }
  function peg$f22(left, arrow, right, label) {
    return {
      type: "relation",
      value: {
        left,
        right,
        relationType: arrow,
        label: label || null
      }
    };
  }
  function peg$f23(name) {    return name.trim();  }
  function peg$f24(name) {    return name;  }
  function peg$f25(name) {    return name;  }
  function peg$f26() {    return "dependency";  }
  function peg$f27() {    return "dependency";  }
  function peg$f28() {    return "directed";  }
  function peg$f29() {    return "directed";  }
  function peg$f30() {    return "directed";  }
  function peg$f31() {    return "directed";  }
  function peg$f32() {    return "dependency";  }
  function peg$f33() {    return "association";  }
  function peg$f34() {    return "association";  }
  function peg$f35(label) {    return label.trim();  }
  function peg$f36(text) {    return text;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDiagram() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsestartuml();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    s4 = peg$parseElementList();
    s5 = peg$parse_();
    s6 = peg$parseenduml();
    if (s6 === peg$FAILED) {
      s6 = null;
    }
    s7 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s4);

    return s0;
  }

  function peg$parsestartuml() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 9) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 9;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      s5 = peg$parseEOL();
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parseEOL();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      s3 = peg$parseEOL();
      if (s3 !== peg$FAILED) {
        s1 = [s1, s2, s3];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseenduml() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      s5 = peg$parseEOL();
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        s5 = peg$parseEOL();
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseElementList() {
    let s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseElement();
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      s3 = [s3, s4];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseElement();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f1(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseElement() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseComment();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseSkinParam();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f3();
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseHideDirective();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f4();
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$parseContainer();
          if (s0 === peg$FAILED) {
            s0 = peg$parseInterfaceDecl();
            if (s0 === peg$FAILED) {
              s0 = peg$parseRelation();
              if (s0 === peg$FAILED) {
                s0 = peg$parseComponentDecl();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseComment() {
    let s0, s1, s2, s3, s4, s5;
